Feature/complete todos (#30)
* Add unit test for party form

* Fix edit-politician EP url

* Fix removeEmptyAttributes, remove from nested objects

* Put ID of party in path url and not as query param

* Forms refactoring

* Move interfaces into 1 file

* Change eslint to airbnb config

* Finish eslint setup

--- a/src/app/modules/party/forms/politician-form/politician-form.component.html
+++ b/src/app/modules/party/forms/politician-form/politician-form.component.html
@@ -1,41 +1,40 @@
 <form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit(politicianForm)">
   <mat-form-field class="span-6" appearance="outline">
-    <mat-label>{{'politician-name' | translate}}</mat-label>
-    <input matInput formControlName="fullName">
-    <mat-error>{{'form-required' | translate}}</mat-error>
+    <mat-label>{{ 'politician-name' | translate }}</mat-label>
+    <input matInput formControlName="fullname" />
+    <mat-error>{{ 'form-required' | translate }}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-6" appearance="outline">
-    <mat-label>{{'birthday' | translate}}</mat-label>
-    <input matInput [matDatepicker]="picker" formControlName="birthDate">
-    <mat-error>{{'form-date' | translate}}</mat-error>
-    <mat-hint>{{'year-format' | translate}}</mat-hint>
+    <mat-label>{{ 'birthday' | translate }}</mat-label>
+    <input matInput [matDatepicker]="picker" formControlName="birthDate" />
+    <mat-error>{{ 'form-date' | translate }}</mat-error>
+    <mat-hint>{{ 'year-format' | translate }}</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker startView="multi-year"></mat-datepicker>
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
-    <mat-label>{{'politician-profileImageUrl' | translate}}</mat-label>
-    <input matInput formControlName="profileImageUrl">
-    <mat-error>{{'form-required' | translate}}</mat-error>
+    <mat-label>{{ 'politician-profileImageUrl' | translate }}</mat-label>
+    <input matInput formControlName="profileImageUrl" />
+    <mat-error>{{ 'form-required' | translate }}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
-    <mat-label>{{'politician-twitterUrl' | translate}}</mat-label>
-    <input matInput formControlName="twitterUrl">
+    <mat-label>{{ 'politician-twitterUrl' | translate }}</mat-label>
+    <input matInput formControlName="twitterUrl" />
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
-    <mat-label>{{'politician-instagramUrl' | translate}}</mat-label>
-    <input matInput formControlName="instagramUrl">
+    <mat-label>{{ 'politician-instagramUrl' | translate }}</mat-label>
+    <input matInput formControlName="instagramUrl" />
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
-    <mat-label>{{'politician-facebookUrl' | translate}}</mat-label>
-    <input matInput formControlName="facebookUrl">
+    <mat-label>{{ 'politician-facebookUrl' | translate }}</mat-label>
+    <input matInput formControlName="facebookUrl" />
   </mat-form-field>
   <div class="form-footer span-12">
     <button (click)="cancel()" type="button" mat-raised-button class="button-add">
-      {{'back' | translate}}
+      {{ 'back' | translate }}
     </button>
-    <!-- TODO dont disable -->
-    <button type="submit" mat-raised-button color="primary" class="button-add" [disabled]="!politicianForm.valid">
-      {{politician ? ('update' | translate) : ('create' | translate)}}
+    <button type="submit" mat-raised-button color="primary" class="button-add">
+      {{ politician ? ('update' | translate) : ('create' | translate) }}
     </button>
   </div>
 </form>
