--- a/src/app/modules/party/page/edit-politician/edit-politician.component.html
+++ b/src/app/modules/party/page/edit-politician/edit-politician.component.html
@@ -1,6 +1,10 @@
 <section class="container">
   <div class="container__content">
-    <h1>{{'politician-edit' | translate}}</h1>
-    <app-politician-form *ngIf="(politician$ | async)! as politician" [politician]="politician" (cancelEvent)="navigateBack()" (submitEvent)="onSubmit($event)"></app-politician-form>
+    <h1>{{ 'politician-edit' | translate }}</h1>
+    <app-politician-form
+      *ngIf="(politician$ | async)! as politician"
+      [politician]="politician"
+      (cancelEvent)="navigateBack()"
+      (submitEvent)="onSubmit($event)"></app-politician-form>
   </div>
 </section>
