--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -3,7 +3,7 @@
     <app-admin-quick-menu-actions
       (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
     <mat-card-header>
-      <mat-card-title>{{ politician.fullname }}</mat-card-title>
+      <mat-card-title>{{ politician.fullName }}</mat-card-title>
       <mat-card-subtitle>{{ politician.birthDate | dateFormatter }}</mat-card-subtitle>
     </mat-card-header>
     <img class="politician-card__image" mat-card-image src="assets/man-user-svgrepo-com.svg" />
