--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -40,7 +40,7 @@
       <h3 class="span-12 politician-number">{{ i + 1 + '.' + ' Politician' | translate }}</h3>
       <mat-form-field class="span-6" appearance="outline">
         <mat-label>{{ 'politician-name' | translate }}</mat-label>
-        <input matInput formControlName="fullname" />
+        <input matInput formControlName="fullName" />
         <mat-error>{{ 'form-required' | translate }}</mat-error>
       </mat-form-field>
       <mat-form-field class="span-6" appearance="outline">
