--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -6,7 +6,7 @@
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
     <mat-label>{{ 'party-image' | translate }}</mat-label>
-    <input matInput formControlName="image" />
+    <input matInput formControlName="imageUrl" />
     <mat-error>{{ 'form-required' | translate }}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
