--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container autosize class="sidenav-container">
   <mat-sidenav
     [autoFocus]="false"
-    [opened]="mobileQuery.matches ? false : true"
+    [opened]="!mobileQuery.matches"
     #snav
     [mode]="mobileQuery.matches ? 'over' : 'side'"
     [fixedInViewport]="mobileQuery.matches">
@@ -24,7 +24,7 @@
         *ngFor="let party of (sidenavParties$ | async)! | filterParties : input.value">
         <div class="party">
           <div class="party__logo-container">
-            <img [src]="party.image" class="party-icon" />
+            <img [src]="party.imageUrl" alt="party icon" class="party-icon" />
           </div>
           <span>{{ party.name }}</span>
         </div>
