--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -37,7 +37,7 @@
     <ng-container
       *ngFor="let politicianForm of politiciansFormArray?.controls; let i = index"
       [formGroupName]="i">
-      <h3 class="span-12 politician-number">{{ i + 1 + '.' + ' Politician' | translate }}</h3>
+      <h3 class="span-12 politician-number">{{ i + 1 + '. ' }} {{ 'politician' | translate }}</h3>
       <mat-form-field class="span-6" appearance="outline">
         <mat-label>{{ 'politician-name' | translate }}</mat-label>
         <input matInput formControlName="fullName" />
