--- a/src/app/modules/party/page/add-party/add-party.component.html
+++ b/src/app/modules/party/page/add-party/add-party.component.html
@@ -1,5 +1,6 @@
 <section class="container">
   <div class="container__content">
+    <h1>{{ 'admin-party-add' | translate }}</h1>
     <app-party-form
       (submitEvent)="onSubmit($event)"
       (cancelEvent)="navigateBack()"></app-party-form>
