Fix politician title colliding with admin actions

--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -3,10 +3,15 @@
     <app-admin-quick-menu-actions
       (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
     <mat-card-header>
-      <mat-card-title>{{ politician.fullName }}</mat-card-title>
+      <mat-card-title class="politician-card__title">{{ politician.fullName }}</mat-card-title>
       <mat-card-subtitle>{{ politician.birthDate | dateFormatter }}</mat-card-subtitle>
     </mat-card-header>
-    <img class="politician-card__image" mat-card-image src="assets/man-user-svgrepo-com.svg" />
+    <!--    TODO make politician image load from url -->
+    <img
+      alt="politician_image"
+      class="politician-card__image"
+      mat-card-image
+      src="assets/man-user-svgrepo-com.svg" />
     <mat-card-content class="politician-card__media">
       <a *ngIf="politician.facebookUrl" [href]="politician.facebookUrl" target="_blank">
         <img
