Load politician image from url

--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -9,7 +9,8 @@
 
   &__image {
     display: block !important;
-    max-height: 15rem !important;
+    height: 200px !important;
+    object-fit: cover;
   }
 
   &__media {
