--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -33,6 +33,11 @@
         <span class="no-result">{{ 'no-result' | translate }}</span>
       </mat-list-item>
     </mat-nav-list>
+    <div class="add-party">
+      <button mat-mini-fab color="primary" routerLink="/political-party/add">
+        <span>+</span>
+      </button>
+    </div>
 
     <span
       (click)="toggleSidenav()"
