--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -3,6 +3,10 @@
 .politician-card {
   max-width: 30rem;
 
+  @media only screen and (max-width: $bp-mobile) {
+    width: 35rem;
+  }
+
   &__title {
     margin-right: 3rem;
   }
@@ -17,6 +21,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 1rem;
+    height: 4rem;
 
     img {
       width: 3rem;
