--- a/src/app/modules/party/forms/politician-form/politician-form.component.html
+++ b/src/app/modules/party/forms/politician-form/politician-form.component.html
@@ -14,7 +14,7 @@
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
     <mat-label>{{ 'politician-profileImageUrl' | translate }}</mat-label>
-    <input matInput formControlName="profileImageUrl" />
+    <input matInput formControlName="imageUrl" />
     <mat-error>{{ 'form-required' | translate }}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
