Open form for 1. politician when creating party

--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -21,6 +21,7 @@
           </button>
           <button mat-raised-button color="primary" class="button-add" (click)="removeParty()">
             <mat-icon>delete_forever</mat-icon>
+            <!--            TODO Modal na potvrzeni smazani-->
             {{ 'remove-party' | translate }}
           </button>
           <button
