--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -19,9 +19,12 @@
             <mat-icon>edit</mat-icon>
             {{ 'edit-party' | translate }}
           </button>
-          <button mat-raised-button color="primary" class="button-add" (click)="removeParty()">
+          <button
+            mat-raised-button
+            color="primary"
+            class="button-add"
+            (click)="openDialogAndRemoveParty()">
             <mat-icon>delete_forever</mat-icon>
-            <!--            TODO Modal na potvrzeni smazani-->
             {{ 'remove-party' | translate }}
           </button>
           <button
