Add age validator

--- a/src/app/modules/party/forms/politician-form/politician-form.component.html
+++ b/src/app/modules/party/forms/politician-form/politician-form.component.html
@@ -7,7 +7,12 @@
   <mat-form-field class="span-6" appearance="outline">
     <mat-label>{{ 'birthday' | translate }}</mat-label>
     <input matInput [matDatepicker]="picker" formControlName="birthDate" />
-    <mat-error>{{ 'form-date' | translate }}</mat-error>
+    <mat-error *ngIf="politicianForm.controls.birthDate.hasError('required')">{{
+      'form-date' | translate
+    }}</mat-error>
+    <mat-error *ngIf="politicianForm.controls.birthDate.hasError('bellowMinimumAge')">{{
+      'form-minimum-age' | translate
+    }}</mat-error>
     <mat-hint>{{ 'year-format' | translate }}</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker startView="multi-year"></mat-datepicker>
