Feature/connect to be (#32)
* Modify political-parties

* Improve error handling

* Correct flow when creating politician

* Show notification when party/politician action was success.

* Improve politicians grid

* Remove political party logic

* Add todos

* Fix politician title colliding with admin actions

* Edit translation

* Load politician image from url

* Improve politicians grid

* Complete todos

* Update attributes

* fix test

* Open form for 1. politician when creating party

* Dialog for remove actions

* Add url validator for forms

* Extend unit tests

* url must begin with http/s

* Add age validator

--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -20,6 +20,14 @@
             {{ 'edit-party' | translate }}
           </button>
           <button
+            mat-raised-button
+            color="primary"
+            class="button-add"
+            (click)="openDialogAndRemoveParty()">
+            <mat-icon>delete_forever</mat-icon>
+            {{ 'remove-party' | translate }}
+          </button>
+          <button
             [routerLink]="['/political-party/detail', party.id, 'add-politician']"
             mat-raised-button
             color="primary"
