--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container autosize class="sidenav-container">
   <mat-sidenav
     [autoFocus]="false"
-    [opened]="mobileQuery.matches ? false : true"
+    [opened]="!mobileQuery.matches"
     #snav
     [mode]="mobileQuery.matches ? 'over' : 'side'"
     [fixedInViewport]="mobileQuery.matches">
@@ -24,7 +24,7 @@
         *ngFor="let party of (sidenavParties$ | async)! | filterParties : input.value">
         <div class="party">
           <div class="party__logo-container">
-            <img [src]="party.image" class="party-icon" />
+            <img [src]="party.imageUrl" alt="party icon" class="party-icon" />
           </div>
           <span>{{ party.name }}</span>
         </div>
@@ -33,6 +33,11 @@
         <span class="no-result">{{ 'no-result' | translate }}</span>
       </mat-list-item>
     </mat-nav-list>
+    <div class="add-party">
+      <button mat-mini-fab color="primary" routerLink="/political-party/add">
+        <span>+</span>
+      </button>
+    </div>
 
     <span
       (click)="toggleSidenav()"
