--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -6,8 +6,13 @@
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
     <mat-label>{{ 'party-image' | translate }}</mat-label>
-    <input matInput formControlName="image" />
-    <mat-error>{{ 'form-required' | translate }}</mat-error>
+    <input matInput formControlName="imageUrl" />
+    <mat-error *ngIf="partyForm.controls.imageUrl.hasError('required')">{{
+      'form-required' | translate
+    }}</mat-error>
+    <mat-error *ngIf="partyForm.controls.imageUrl.hasError('pattern')">{{
+      'form-bad-url-pattern' | translate
+    }}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-12" appearance="outline">
     <mat-label>{{ 'party-tags' | translate }}</mat-label>
@@ -37,7 +42,7 @@
     <ng-container
       *ngFor="let politicianForm of politiciansFormArray?.controls; let i = index"
       [formGroupName]="i">
-      <h3 class="span-12 politician-number">{{ i + 1 + '.' + ' Politician' | translate }}</h3>
+      <h3 class="span-12 politician-number">{{ i + 1 + '. ' }} {{ 'politician' | translate }}</h3>
       <mat-form-field class="span-6" appearance="outline">
         <mat-label>{{ 'politician-name' | translate }}</mat-label>
         <input matInput formControlName="fullName" />
@@ -46,27 +51,40 @@
       <mat-form-field class="span-6" appearance="outline">
         <mat-label>{{ 'birthday' | translate }}</mat-label>
         <input matInput [matDatepicker]="picker" formControlName="birthDate" />
-        <mat-error>{{ 'form-date' | translate }}</mat-error>
+        <mat-error *ngIf="politicianForm.controls.birthDate.hasError('required')">{{
+          'form-date' | translate
+        }}</mat-error>
+        <mat-error *ngIf="politicianForm.controls.birthDate.hasError('bellowMinimumAge')">{{
+          'form-minimum-age' | translate
+        }}</mat-error>
         <mat-hint>{{ 'year-format' | translate }}</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker startView="multi-year"></mat-datepicker>
       </mat-form-field>
       <mat-form-field class="span-12" appearance="outline">
         <mat-label>{{ 'politician-profileImageUrl' | translate }}</mat-label>
-        <input matInput formControlName="profileImageUrl" />
-        <mat-error>{{ 'form-required' | translate }}</mat-error>
+        <input matInput formControlName="imageUrl" />
+        <mat-error *ngIf="politicianForm.controls.imageUrl.hasError('required')">{{
+          'form-required' | translate
+        }}</mat-error>
+        <mat-error *ngIf="politicianForm.controls.imageUrl.hasError('pattern')">{{
+          'form-bad-url-pattern' | translate
+        }}</mat-error>
       </mat-form-field>
       <mat-form-field class="span-12" appearance="outline">
         <mat-label>{{ 'politician-twitterUrl' | translate }}</mat-label>
         <input matInput formControlName="twitterUrl" />
+        <mat-error>{{ 'form-bad-url-pattern' | translate }}</mat-error>
       </mat-form-field>
       <mat-form-field class="span-12" appearance="outline">
         <mat-label>{{ 'politician-instagramUrl' | translate }}</mat-label>
         <input matInput formControlName="instagramUrl" />
+        <mat-error>{{ 'form-bad-url-pattern' | translate }}</mat-error>
       </mat-form-field>
       <mat-form-field class="span-12" appearance="outline">
         <mat-label>{{ 'politician-facebookUrl' | translate }}</mat-label>
         <input matInput formControlName="facebookUrl" />
+        <mat-error>{{ 'form-bad-url-pattern' | translate }}</mat-error>
       </mat-form-field>
       <div class="span-12 delete-politician">
         <button type="button" mat-fab color="warn" (click)="removePolitician(i)">
