--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -1,17 +1,27 @@
 @import '../../../../../styles/variables.scss';
 
 .politician-card {
-  width: $card-width;
+  max-width: 30rem;
+
+  @media only screen and (max-width: $bp-mobile) {
+    width: 35rem;
+  }
+
+  &__title {
+    margin-right: 3rem;
+  }
 
   &__image {
     display: block !important;
-    max-height: 15rem !important;
+    height: 200px !important;
+    object-fit: cover;
   }
 
   &__media {
     display: flex;
     justify-content: space-evenly;
     margin-top: 1rem;
+    height: 4rem;
 
     img {
       width: 3rem;
