Improve politicians grid
(cherry picked from commit f9f383472be053f1f984c130992eea6c2e63f999)

--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -60,16 +60,16 @@
 
   display: grid;
   padding-bottom: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));
-  gap: 3.3rem;
+  grid-template-columns: repeat(3, minmax($card-width, 32rem));
+  gap: 3rem;
 
-  @media only screen and (max-width: $bp-small) {
-    gap: 2rem;
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-columns: [center-start] repeat(2, minmax(20rem, 1fr)) [center-end];
   }
 
   @media only screen and (max-width: $bp-mobile) {
-    grid-template-columns: 1fr;
-    justify-items: center;
+    grid-template-columns: [center-start] 1fr [center-end];
+    gap: 2rem;
   }
 }
 
