--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -35,6 +35,7 @@
     </mat-nav-list>
     <div class="add-party">
       <button
+        *ngIf="hasPermission$ | async"
         (click)="closeSidenavIfMatches()"
         mat-mini-fab
         color="primary"
