--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="politician">
   <mat-card appearance="outlined" class="politician-card mat-elevation-z2">
     <app-admin-quick-menu-actions
+      *ngIf="hasPermission$ | async"
       (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
     <mat-card-header>
       <mat-card-title class="politician-card__title">{{ politician.fullName }}</mat-card-title>
