--- a/src/app/modules/home/page/home/home.component.scss
+++ b/src/app/modules/home/page/home/home.component.scss
@@ -20,3 +20,9 @@
     grid-column: center-start / center-end;
   }
 }
+
+.news__actions {
+  grid-column: center-start / center-end;
+  justify-self: flex-end;
+  margin-bottom: 2rem;
+}
