News load image from url, display date

--- a/src/app/modules/home/page/home/news/news.component.scss
+++ b/src/app/modules/home/page/home/news/news.component.scss
@@ -3,14 +3,14 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
-    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
-    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0 1px 1px, rgba(0, 0, 0, 0.07) 0 2px 2px,
+    rgba(0, 0, 0, 0.07) 0 4px 4px, rgba(0, 0, 0, 0.07) 0 8px 8px,
+    rgba(0, 0, 0, 0.07) 0 16px 16px;
   transition: box-shadow 0.1s;
 
   @media (hover: hover) {
     &:hover {
-      box-shadow: 0px 0px 34px -7px rgba(10, 10, 10, 1);
+      box-shadow: 0 0 34px -7px rgba(10, 10, 10, 1);
       outline: 3px solid rgb(41, 121, 255);
     }
   }
@@ -18,7 +18,8 @@
   img {
     object-fit: cover;
     width: 100%;
-    height: 30rem;
+    height: 100%;
+    min-height: 30rem;
     display: block;
     transition: all 0.5s;
   }
