--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="spinner$ | async" class="overlay">
   <mat-spinner></mat-spinner>
 </div>
+<section class="layout">
+  <app-navbar></app-navbar>
 
-<app-navbar></app-navbar>
-
-<app-sidenav></app-sidenav>
+  <app-sidenav></app-sidenav>
+</section>
 <!-- footer -->
