--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -3,6 +3,8 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  //position: static;
+  height: 5rem;
 
   &__politi {
     text-decoration: none;
