--- a/src/app/modules/home/page/home/news-detail/news-detail.component.scss
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.scss
@@ -1,20 +1,23 @@
 .news {
-  background-color: #fff;
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  padding: 3rem;
 
   &__header {
     color: #fff;
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
 
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
     &__box {
       flex-grow: 1;
-      border-bottom: 10px solid rgb(41, 121, 255);
       display: flex;
+      width: 100%;
       flex-direction: column;
       justify-content: center;
       position: relative;
@@ -41,5 +44,6 @@
 
   &__content {
     font-size: 1.35rem;
+    margin-top: 2rem;
   }
 }
