Improve news UI (#35)
* Add news button

* News load image from url, display date

* Improve news UI

* Add url to prod env

--- a/src/app/modules/home/page/home/home.component.scss
+++ b/src/app/modules/home/page/home/home.component.scss
@@ -18,5 +18,12 @@
 
   & app-news:nth-of-type(1) {
     grid-column: center-start / center-end;
+    height: 40rem;
   }
+}
+
+.news__actions {
+  grid-column: center-start / center-end;
+  justify-self: flex-end;
+  margin-bottom: 2rem;
 }
