Add better news UI to demo

--- a/src/app/modules/home/page/home/news/news.component.html
+++ b/src/app/modules/home/page/home/news/news.component.html
@@ -1,7 +1,11 @@
 <div class="news" (click)="navigateToDetail(news.id)">
-  <img alt="politician image" src="assets/polit.jpg" />
+  <app-admin-quick-menu-actions
+    (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
+  <img [src]="news.imageUrl" alt="politician image" />
   <div class="news__text">
     <h3>{{ news.heading }}</h3>
-    <div class="news__text__content">{{ news.content }}</div>
+    <div class="news__text__content"
+      ><b>{{ news.publishDate | dateFormatter : dateTimeFormat }}</b> - {{ news.content }}</div
+    >
   </div>
 </div>
