--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -87,13 +87,23 @@
         <mat-error>{{ 'form-bad-url-pattern' | translate }}</mat-error>
       </mat-form-field>
       <div *ngIf="i > 0" class="span-12 delete-politician">
-        <button type="button" mat-fab color="warn" (click)="removePolitician(i)">
+        <button
+          [matTooltip]="'remove-politician' | translate"
+          type="button"
+          mat-fab
+          color="warn"
+          (click)="removePolitician(i)">
           <mat-icon>clear</mat-icon>
         </button>
       </div>
     </ng-container>
     <div class="span-12 add-politician-container">
-      <button type="button" mat-fab color="primary" (click)="addPolitician()">
+      <button
+        [matTooltip]="'politician-add-next' | translate"
+        type="button"
+        mat-fab
+        color="primary"
+        (click)="addPolitician()">
         <mat-icon>add</mat-icon>
       </button>
     </div>
