--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,11 @@
-$sidenav-width: 16em;
+$sidenav-text-width: 15em;
 $card-width: 22rem;
 
 $bp-mobile: 37.5em; // 600px
 $bp-small: 53.125em; // 850px
 $bp-medium: 62.5em; // 1000px
 $bp-large: 75em; // 1200px
+$bp-larger: 85em; // 1360px
 $bp-xlarge: 103.125em; //1650px
 
 $main-color: #2979ff;
