--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -14,7 +14,23 @@
     img {
       width: 100%;
       height: 100%;
+      min-width: 4rem;
       object-fit: contain;
+    }
+  }
+
+  &__name {
+    max-width: calc($sidenav-text-width - 5rem);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+    @media only screen and (max-width: $bp-larger) {
+      max-width: 40rem;
+    }
+
+    @media only screen and (max-width: $bp-mobile) {
+      max-width: $sidenav-text-width;
     }
   }
 }
