--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
     </div>
     <mat-nav-list>
       <mat-list-item
-        (click)="navigateToPoliticalPartyPage(party.id)"
+        (click)="navigateToPoliticalPartyPage(party.id!)"
         *ngFor="let party of (sidenavParties$ | async)! | filterParties : input.value">
         <div class="party">
           <div class="party__logo-container">
